fix: correct font formatting and adjust layout
add colors to represent picture of projects in
each project picture.

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Homepage</title>
   </head>
 
@@ -64,7 +66,7 @@ Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, hic! Quaerat ex 
         <h2 class="my-work-header">My Work</h2>
         <ul class="projects-container">
           <li>
-            <div class="project-image">Image of project</div>
+            <div class="project-image proj1">Image of project</div>
             <div class="project-details-container">
               <div class="name-and-icons">
                 <h3 class="project-names">Project Name</h3>
@@ -89,7 +91,7 @@ Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, hic! Quaerat ex 
             </div>
           </li>
           <li>
-            <div class="project-image">Image of project</div>
+            <div class="project-image proj2">Image of project</div>
             <div class="project-details-container">
               <div class="name-and-icons">
                 <h3 class="project-names">Project Name</h3>
@@ -114,7 +116,7 @@ Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, hic! Quaerat ex 
             </div>
           </li>
           <li>
-            <div class="project-image">Image of project</div>
+            <div class="project-image proj3">Image of project</div>
             <div class="project-details-container">
               <div class="name-and-icons">
                 <h3 class="project-names">Project Name</h3>
@@ -139,7 +141,7 @@ Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, hic! Quaerat ex 
             </div>
           </li>
           <li>
-            <div class="project-image">Image of project</div>
+            <div class="project-image proj4">Image of project</div>
             <div class="project-details-container">
               <div class="name-and-icons">
                 <h3 class="project-names">Project Name</h3>
@@ -164,7 +166,7 @@ Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, hic! Quaerat ex 
             </div>
           </li>
           <li>
-            <div class="project-image">Image of project</div>
+            <div class="project-image proj5">Image of project</div>
             <div class="project-details-container">
               <div class="name-and-icons">
                 <h3 class="project-names">Project Name</h3>
@@ -189,7 +191,7 @@ Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, hic! Quaerat ex 
             </div>
           </li>
           <li>
-            <div class="project-image">Image of project</div>
+            <div class="project-image proj6">Image of project</div>
             <div class="project-details-container">
               <div class="name-and-icons">
                 <h3 class="project-names">Project Name</h3>
