--- a/src/index.html
+++ b/src/index.html
@@ -255,7 +255,7 @@ Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, hic! Quaerat ex 
               <a href=""
                 ><img
                   src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
-                  alt="linked-in"
+                  alt="linkedin"
                   height="30px"
                   width="30px"
               /></a>
